iac/deployments/scraper.yaml

# netowrk policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-27017
  namespace: esd-project
spec:
  podSelector:
    matchLabels:
      app: scraper-db
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-db-deployment
  namespace: esd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-db
  template:
    metadata:
      labels:
        app: scraper-db
    spec:
      containers:
      - name: scraper-db
        image: docker.io/chernise/esdproject-scraper_db:latest
        ports:
        - containerPort: 27017
    volumeMounts:
    - name: scraper-db-volume
      mountPath: /data/db

---
apiVersion: v1
kind: Service
metadata:
  name: scraper-db
  namespace: esd-project
spec:
  type: ClusterIP
  selector:
    app: scraper-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
########################
###### scraper  #####
########################

# netowrk policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-5000
  namespace: esd-project
spec:
  podSelector:
    matchLabels:
      app: scraper
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 5000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-deployment
  namespace: esd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: scraper
        image: docker.io/chernise/esdproject-scraper:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: scraper
  namespace: esd-project
spec:
  type: LoadBalancer
  selector:
    app: scraper
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

# scraper:
#     image: chernise/esdproject-scraper:latest
#     ports:
#       - "5000:5000"
#     command: ["node", "app.js"]
#     environment:
#       - ALPHA_VANTAGE_API_KEY=youralphavantageapikey
#       - PORT=5000
#       - DB_URL=scraper_db:27017
#     restart: unless-stopped
#     networks:
#       - sentiment_network
#       - scraper_network
#       - kong_network

# ########################
# ## sentiment app     ###
# ########################

# # netowrk policy
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-port-5001
#   namespace: esd-project
# spec:
#   podSelector:
#     matchLabels:
#       app: sentiment_app
#   policyTypes:
#   - Ingress
#   ingress:
#   - from: []
#     ports:
#     - protocol: TCP
#       port: 5001
# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: sentiment-app-deployment
#   namespace: esd-project
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: sentiment_app
#   template:
#     metadata:
#       labels:
#         app: sentiment_app
#     spec:
#       containers:
#       - name: sentiment_app
#         image: docker.io/chernise/esdproject-sentiment_app:latest
#         command: ["npm", "start"]
#         ports:
#         - containerPort: 5001
#     # environment:
#     #   - SENTIMENT_SERVICE_URL=http://sentiment_service:5002/
#     #   - DB_URL=sentiment_db:27017
#     #   - AMQP_SERVER=amqp://rabbitmq:5672
#     #   - SCRAPER_URL=http://scraper:5000
#     #   - TRANSACTIONS_URL=http://transactions:6002
#     env:
#     - name: AMQP_SERVER
#       value: "amqp://rabbitmq:5672"
#     - name: DB_URL
#       value: "sentiment_db:27017"
#     - name: SCRAPER_URL
#       value: "http://scraper:5000"
#     - name: TRANSACTIONS_URL  
#       value: "http://transactions:6002"
#     - name: SENTIMENT_SERVICE_URL
#       value: "http://sentiment_service:5002/"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: sentiment-app
#   namespace: esd-project
# spec:
#   type: LoadBalancer
#   selector:
#     app: sentiment_app
#   ports:
#     - protocol: TCP
#       port: 5001
#       targetPort: 5001
# ---
# ########################
# ####### sentiment db ###
# ########################

# # volume
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: sentiment-db-volume
# spec:
#   storageClassName: standard-rwo
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi
# ---

# # netowrk policy
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-port-27017
#   namespace: esd-project
# spec:
#   podSelector:
#     matchLabels:
#       app: sentiment_db
#   policyTypes:
#   - Ingress
#   ingress:
#   - from: []
#     ports:
#     - protocol: TCP
#       port: 27017
# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: sentiment-db-deployment
#   namespace: esd-project
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: sentiment_db
#   template:
#     metadata:
#       labels:
#         app: sentiment_db
#     spec:
#       containers:
#       - name: sentiment_db
#         image: docker.io/chernise/esdproject-sentiment_db:latest
#         ports:
#         - containerPort: 27017
#     env:
#     - name: MONGO_INITDB_DATABASE
#       value: "sentiment"
#     - name: MONGO_INITDB_ROOT_USERNAME
#       value: "root"
#     - name: MONGO_INITDB_ROOT_PASSWORD
#       value: "root"
#     volumeMounts:
#     - name: sentiment-db-volume
#       mountPath: /data/db
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: sentiment-db
#   namespace: esd-project
# spec:
#   type: ClusterIP
#   selector:
#     app: sentiment_db
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017
