iac/deployments/transactionsService.yaml

########################
### transactions #######
########################

# network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-6002
  namespace: esd-project
spec:
  podSelector:
    matchLabels:
      app: transactions  # changed here
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 6002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-deployment  # changed here
  namespace: esd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions  # changed here
  template:
    metadata:
      labels:
        app: transactions  # changed here
    spec:
      containers:
      - name: transactions  # changed here
        image: docker.io/chernise/esdproject-transactions:latest  # changed here
        ports:
        - containerPort: 6002
        command: ["gunicorn"]
        args: ["-w", "1", "--threads", "2", "-b", ":6002", "--timeout", "600", "transaction:app"]
---

apiVersion: v1
kind: Service
metadata:
  name: transactions  # changed here
  namespace: esd-project
spec:
  type: LoadBalancer
  selector:
    app: transactions  # changed here
  ports:
    - protocol: TCP
      port: 6002
      targetPort: 6002

---

# network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-5432
  namespace: esd-project
spec:
  podSelector:
    matchLabels:
      app: transactions-db
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-db-deployment
  namespace: esd-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-db
  template:
    metadata:
      labels:
        app: transactions-db
    spec:
      containers:
      - name: transactions-db
        image: docker.io/chernise/esdproject-transactions_db:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: transactions-db-volume
          mountPath: /var/lib/postgresql/data/pgdata

      volumes:
      - name: transactions-db-volume
        persistentVolumeClaim:
          claimName: transactions-db-volume

---

apiVersion: v1
kind: Service
metadata:
  name: transactions-db
  namespace: esd-project
spec:
  type: ClusterIP
  selector:
    app: transactions-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
